fixed img logo on dark mode

--- a/src/index.css
+++ b/src/index.css
@@ -718,6 +718,9 @@ input[type="file"] {
     color: white;
   }
   
+  .☽ .img-logo {
+    filter: invert(1);
+  }
 
 
   /* Large devices (desktops, 992px and up) */
